# Nano-U

./: .gitignore  API_REFERENCE.md  ARCHITECTURE_AND_FEATURES.md  CODE_REVIEW.md  DEVELOPMENT.md  FIXES_REQUIRED.md  INSTALLATION.md  LICENSE  QUICK_REFERENCE.md  README.md  REFACTORING_ROADMAP.md  REFACTURING_DOCUMENTATION.md  RESEARCH_PAPER.md  WORKSHOP_PREPARATION.md  pyproject.toml  pytest.ini  requirements.txt  stack_log.txt  temp_model_save.keras
.github/workflows/: deploy.yml
checkpoints/: model_1.h5  model_2.h5
config/: botanic_garden_config.yaml  config.yaml  experiments.yaml  tinyagri_config.yaml
data/: .gitignore
docs/: NAS_README.md  USAGE_EXAMPLES.md
esp_flash/: .gitignore  Cargo.toml  README.md  RUST_ESP32S3_NOSTD.md  build.rs  run_analyzer.sh  run_inference.py  stack_analyzer.py  stack_log.txt
firmware/: Cargo.toml  README.md  build.rs
firmware/.cargo/: config.toml
firmware/src/: camera.rs  control.rs  lib.rs
logs/nas/: events.out.tfevents.1768577812.archlinux.200264.0.v2  events.out.tfevents.1768577828.archlinux.201241.0.v2  events.out.tfevents.1768578718.archlinux.222421.0.v2  events.out.tfevents.1768579199.archlinux.236477.0.v2  events.out.tfevents.1768831835.archlinux.32216.0.v2  events.out.tfevents.1768832137.archlinux.38713.0.v2  events.out.tfevents.1768832157.archlinux.39697.0.v2  events.out.tfevents.1768833978.archlinux.96087.0.v2  events.out.tfevents.1768834013.archlinux.98031.0.v2  events.out.tfevents.1768834053.archlinux.101389.0.v2  events.out.tfevents.1768834151.archlinux.104399.0.v2  events.out.tfevents.1768834297.archlinux.112139.0.v2  events.out.tfevents.1768834362.archlinux.114714.0.v2  events.out.tfevents.1768834385.archlinux.115667.0.v2  events.out.tfevents.1768834463.archlinux.118445.0.v2  events.out.tfevents.1768834495.archlinux.120344.0.v2  events.out.tfevents.1768834567.archlinux.122207.0.v2  events.out.tfevents.1769360628.archlinux.87850.0.v2  events.out.tfevents.1769360720.archlinux.89569.0.v2  events.out.tfevents.1769360742.archlinux.90045.0.v2  events.out.tfevents.1769360791.archlinux.90960.0.v2  events.out.tfevents.1769360845.archlinux.91952.0.v2  events.out.tfevents.1769360896.archlinux.92871.0.v2  events.out.tfevents.1769361114.archlinux.99134.0.v2  events.out.tfevents.1769365502.archlinux.22558.0.v2  events.out.tfevents.1769365504.archlinux.22649.0.v2  events.out.tfevents.1769365506.archlinux.22735.0.v2  events.out.tfevents.1769365507.archlinux.22824.0.v2  events.out.tfevents.1769365509.archlinux.22911.0.v2  events.out.tfevents.1769365511.archlinux.22998.0.v2  events.out.tfevents.1769365513.archlinux.23092.0.v2  events.out.tfevents.1769365515.archlinux.23178.0.v2  nas_metrics.csv
logs/train/: events.out.tfevents.1770233917.archlinux.391950.0.v2  events.out.tfevents.1770233936.archlinux.392621.0.v2  events.out.tfevents.1770233960.archlinux.393590.0.v2  events.out.tfevents.1770234089.archlinux.394938.0.v2  events.out.tfevents.1770245668.archlinux.512517.0.v2  events.out.tfevents.1770245945.archlinux.521174.0.v2  events.out.tfevents.1770246656.archlinux.534532.0.v2  events.out.tfevents.1770246977.archlinux.542645.0.v2  events.out.tfevents.1770247131.archlinux.549208.0.v2  events.out.tfevents.1770247242.archlinux.552995.0.v2  events.out.tfevents.1770247386.archlinux.557050.0.v2  events.out.tfevents.1770247538.archlinux.561260.0.v2  events.out.tfevents.1770247659.archlinux.565155.0.v2  events.out.tfevents.1770247859.archlinux.575022.0.v2  events.out.tfevents.1770248071.archlinux.583343.0.v2  events.out.tfevents.1770248312.archlinux.592798.0.v2  events.out.tfevents.1770291026.archlinux.7057.1.v2  events.out.tfevents.1770291389.archlinux.17435.1.v2  events.out.tfevents.1770291702.archlinux.67319.1.v2  events.out.tfevents.1770291859.archlinux.75252.1.v2  events.out.tfevents.1770292037.archlinux.81087.1.v2  events.out.tfevents.1770292061.archlinux.84477.1.v2  events.out.tfevents.1770292128.archlinux.88937.1.v2  events.out.tfevents.1770293552.archlinux.109834.1.v2  (+6 more)
models/: .gitignore  ARCHITECTURE.md
models/BotanicGarden/: nano_u.tflite
notebooks/: Nano_U_guide.ipynb  experiment_retraining.ipynb  research_analysis.ipynb  training_workflow.ipynb
old/esp-flash/: Cargo.toml
old/esp-flash/.cargo/: config.toml
old/esp-flash/src/: main.rs
old_nano_u/: png-to-rgb.py  pytorch-tflite-quant.py
plans/: MASTER_PLAN.md  PROJECT_PLAN.md  PROJECT_STATUS.md  nas_covariance_changelog.md
scripts/: benchmark_on_esp.py  benchmark_person_detect.py  capture_view.py  cv_search.py  eval_esp32.py  fine_tune_nano_u.py  generate_new_labels.py  infer_demo.py  migrate_config.py  nas_search.py  plot_pipeline.py  profile_mobilenet.py  profile_nano_u.py  run_experiments.py  run_inference.py  run_pipeline.py  run_qad.py  stack_analyzer.py  stack_analyzer_mobilenet.py  summarize_results.py  tf_pipeline.py  tf_pipeline.sh  train_distillation.py  train_model.py  train_standard.py
src/: __init__.py  benchmark.py  benchmarks.py  build_net.py  data.py  data_preparation.py  evaluate.py  evaluate_tf.py  ground_truth_extraction.py  infer.py  infer_tf.py  models_impl.py  nas.py  nas_analyze.py  nas_covariance.py  pipeline.py  plot_nas_metrics.py  prepare_data.py  pruning.py  quantize.py  quantize_model.py  quantize_tf.py  template_dataset_reader.py  train.py  train_nas_wrapper.py  train_tf.py  train_with_nas.py
src_tf/: __init__.py  infer_tf.py  prepare_data.py  quantize_tf.py  train_tf.py
tests/: conftest.py  test_architecture_fixes.py  test_bce.py  test_bn_updates.py  test_conv2d.py  test_embeddings.rs  test_minimal_fold.py  test_models.py  test_nas_callback.py  test_nas_covariance.py  test_nas_layer_selectors.py  test_nas_search.py  test_pipeline.py  test_qat.py  test_qat_bn.py  test_qat_standard.py  test_qat_updates.py  test_svd.py  test_tf_pipeline.py  test_tflite.py  test_tflite_compatibility.py  test_tfmot.py  test_tfmot_dw.py  test_tfmot_wrapper.py  test_train.py  verify_distillation.py
(+81 files in other folders)
