[package]
edition = "2024"
name = "nano_u_esp"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "inference"
path = "./src/bin/inference.rs"

[[bin]]
name = "analysis"
path = "./src/bin/analysis.rs"

[dependencies]
# Core ESP32-S3 HAL
esp-hal = { version = "~1.0", features = ["esp32s3", "log-04", "unstable"] }

# Logging
log = "0.4.22"
esp-println = { version = "0.16.1", features = ["esp32s3", "log-04"] }

# Panic Handling
esp-backtrace = { version = "0.18.1", features = [
  "esp32s3",
  "panic-handler",
  "println",
] }

# Bootloader Support
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }
esp-rom-sys = { version = "0.1.3", features = ["esp32s3"] }

# Math & Inference
critical-section = "1.2.0"
nalgebra = { version = "0.32.6", default-features = false, features = [
  "macros",
  "libm",
] }
libm = "0.2"
microflow = { path = "../../microflow-rs", version = "0.1.3" }

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 0
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = true
panic = 'abort'
