[package]
name = "esp32-flash"
version = "0.1.0"
authors = ["Federico Pizzolato"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# --- Core HAL and Allocator ---
esp-hal = { version = "1.0.0-rc.1", features = [
    "esp32",
	"log-04",
	]}
esp-alloc = { version = "0.9.0" }

# --- Async Runtime (Embassy) ---
# This replaces esp-rtos
embassy-executor = { version = "0.5.0", features = [
	"integrated-timers",
	]}
embassy-time = { version = "0.3.1" }
embassy-sync = { version = "0.6.0", features = ["xtensa-atomic-cas"]}
# --- Logging and Panic Handling ---
esp-backtrace = { version = "0.18.0", features = ["esp32", "panic-handler", "println"] }
esp-println = { version = "0.16.0", features = ["esp32", "log-04"] }
log = { version = "0.4.27" }

# --- Inference Engine ---
# As seen in your working example.
# Use the path if you have a local modified version.
microflow = { path = "../../microflow-rs_modified" } 
# --- OR ---
# Use the public crate version if you don't
# microflow = "0.1.3"

# microflow requires nalgebra
nalgebra = { version = "0.32.3", default-features = false }

[profile.dev]
# Keep this! Default debug builds are too slow.
opt-level = "s"

[profile.release]
# Your original release settings are perfect.
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

